Revision history for Perl module XML::RSS

1.43 - January 12, 2009
    - Fixed the date on the last entry on this changelog, to say "2009"
    instead of "2008".
        - http://rt.cpan.org/Ticket/Display.html?id=42304

1.42 - January 3, 2009
    - When transforming elements with attributes into hash-refs - make
    sure they are placed in the correct namespace. Previously 
    <media:description> over-rided the plain <description>. (as in Flickr).

1.41 - December 4, 2008    
    - Made the default keys for the channel link, description and title undef 
    instead of ''. They become '' once they are opened.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40686
    - Now keeping track of rdf:resource of <image> in RSS 1.0:
        - http://rt.cpan.org/Ticket/Display.html?id=3978
    - Made sure that channel/{link,description,title} are localized to
    the empty string before rendering, to allow for better backwards
    compatibility.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40686    

1.40 - December 1, 2008
    - Now outputting an arrayref of <skipDays>/<day>'s and <skipHours>/<hours>
    properly.
        - http://rt.cpan.org/Public/Bug/Display.html?id=40978
    - Now parsing multiple <category>'ies inside an <item> into an
    array-reference.
        - http://rt.cpan.org/Ticket/Display.html?id=38296
    - Now outputting an arayref of <item>/<category> prpoerly.
        - http://rt.cpan.org/Ticket/Display.html?id=38296
    - Parsing multiple <channel>/<category> into arrays.
        - http://rt.cpan.org/Public/Bug/Display.html?id=9729
    - Rendering multiple <channel>/<category> elements from array refs.
        - http://rt.cpan.org/Public/Bug/Display.html?id=9729
    - Now parsing multiple dc:items into an array 
    reference (at least inside an <item>):
        - http://rt.cpan.org/Public/Bug/Display.html?id=6000
    - Added the modules_as_arrays option to parse repeatable module elements
    into an array ref.
        
